added garbage collection on huffman trie dll

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,3 +8,7 @@ huffman_trie:
 bit_array:
 	g++ -c -fPIC bit_array.cpp -o lib/bit_array.o
 	g++ -shared -Wl,-soname,lib_bit_array.so -o lib/lib_bit_array.so lib/bit_array.o
+
+
+clean:
+	rm lib/*
